overlap issue is fixed

--- a/client/src/components/organisms/accordion-document/style.scss
+++ b/client/src/components/organisms/accordion-document/style.scss
@@ -112,6 +112,7 @@ $vw-viewport: 1440;
       @media (max-width: 768px) {
         margin-bottom: 32px;
         font-size: 14px;
+        line-height: 19.6px;
       }
     }
   }
